parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> block
Rule 2     block -> LBRACE declaration statements RBRACE
Rule 3     declaration -> type ID SEMICOLON declaration
Rule 4     declaration -> empty
Rule 5     type -> basic dimensions
Rule 6     type -> basic HASH
Rule 7     type -> basic
Rule 8     type -> RECORD LBRACE declaration RBRACE
Rule 9     dimensions -> LBRACK NUMBER_INT RBRACK dimensions
Rule 10    dimensions -> LBRACK NUMBER_INT RBRACK
Rule 11    basic -> INT
Rule 12    basic -> CHAR
Rule 13    basic -> BOOL
Rule 14    statements -> statement statements
Rule 15    statements -> empty
Rule 16    statement -> local EQUALS boolean SEMICOLON
Rule 17    statement -> conditional
Rule 18    statement -> while_loop
Rule 19    statement -> do_while_loop
Rule 20    statement -> BREAK SEMICOLON
Rule 21    statement -> print
Rule 22    statement -> read
Rule 23    statement -> block
Rule 24    print -> PRINT LPAREN boolean RPAREN SEMICOLON
Rule 25    read -> READ LPAREN local RPAREN SEMICOLON
Rule 26    conditional -> IF LPAREN boolean RPAREN statement conditional_aux
Rule 27    conditional_aux -> ELSE statement
Rule 28    conditional_aux -> empty
Rule 29    while_loop -> WHILE LPAREN boolean RPAREN statement
Rule 30    do_while_loop -> DO statement WHILE LPAREN boolean RPAREN SEMICOLON
Rule 31    local -> HASH ID local_aux
Rule 32    local -> ID local_aux
Rule 33    local_aux -> offset
Rule 34    local_aux -> field
Rule 35    local_aux -> empty
Rule 36    offset -> LBRACK boolean RBRACK offset
Rule 37    offset -> empty
Rule 38    field -> DOT factor field
Rule 39    field -> DOT factor
Rule 40    boolean -> join boolean_aux
Rule 41    boolean_aux -> OR join boolean_aux
Rule 42    boolean_aux -> empty
Rule 43    join -> equality join_aux
Rule 44    join_aux -> AND equality join_aux
Rule 45    join_aux -> empty
Rule 46    equality -> relational equality_aux
Rule 47    equality_aux -> EQ relational equality_aux
Rule 48    equality_aux -> NEQ relational equality_aux
Rule 49    equality_aux -> empty
Rule 50    relational -> expression relational_operator expression
Rule 51    relational_operator -> LT
Rule 52    relational_operator -> LE
Rule 53    relational_operator -> GT
Rule 54    relational_operator -> GE
Rule 55    expression -> term expression_aux
Rule 56    expression_aux -> expression_operator term expression_aux
Rule 57    expression_aux -> empty
Rule 58    expression_operator -> PLUS
Rule 59    expression_operator -> MINUS
Rule 60    term -> unary term_aux
Rule 61    term_aux -> TIMES unary term_aux
Rule 62    term_aux -> DIVIDE unary term_aux
Rule 63    term_aux -> empty
Rule 64    unary -> NOT unary
Rule 65    unary -> NEG unary
Rule 66    unary -> factor
Rule 67    factor -> LPAREN boolean RPAREN
Rule 68    factor -> local
Rule 69    factor -> NUMBER_INT
Rule 70    factor -> NUMBER_FLOAT
Rule 71    factor -> FALSE
Rule 72    factor -> TRUE
Rule 73    empty -> <empty>

Terminals, with rules where they appear

AND                  : 44
BOOL                 : 13
BREAK                : 20
CHAR                 : 12
DIVIDE               : 62
DO                   : 30
DOT                  : 38 39
ELSE                 : 27
EQ                   : 47
EQUALS               : 16
FALSE                : 71
GE                   : 54
GT                   : 53
HASH                 : 6 31
ID                   : 3 31 32
IF                   : 26
INT                  : 11
LBRACE               : 2 8
LBRACK               : 9 10 36
LE                   : 52
LPAREN               : 24 25 26 29 30 67
LT                   : 51
MINUS                : 59
NEG                  : 65
NEQ                  : 48
NOT                  : 64
NUMBER_FLOAT         : 70
NUMBER_INT           : 9 10 69
OR                   : 41
PLUS                 : 58
PRINT                : 24
RBRACE               : 2 8
RBRACK               : 9 10 36
READ                 : 25
RECORD               : 8
RPAREN               : 24 25 26 29 30 67
SEMICOLON            : 3 16 20 24 25 30
TIMES                : 61
TRUE                 : 72
WHILE                : 29 30
error                : 

Nonterminals, with rules where they appear

basic                : 5 6 7
block                : 1 23
boolean              : 16 24 26 29 30 36 67
boolean_aux          : 40 41
conditional          : 17
conditional_aux      : 26
declaration          : 2 3 8
dimensions           : 5 9
do_while_loop        : 19
empty                : 4 15 28 35 37 42 45 49 57 63
equality             : 43 44
equality_aux         : 46 47 48
expression           : 50 50
expression_aux       : 55 56
expression_operator  : 56
factor               : 38 39 66
field                : 34 38
join                 : 40 41
join_aux             : 43 44
local                : 16 25 68
local_aux            : 31 32
offset               : 33 36
print                : 21
program              : 0
read                 : 22
relational           : 46 47 48
relational_operator  : 50
statement            : 14 26 27 29 30
statements           : 2 14
term                 : 55 56
term_aux             : 60 61 62
type                 : 3
unary                : 60 61 62 64 65
while_loop           : 18

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . block
    (2) block -> . LBRACE declaration statements RBRACE

    LBRACE          shift and go to state 3

    program                        shift and go to state 1
    block                          shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> block .

    $end            reduce using rule 1 (program -> block .)


state 3

    (2) block -> LBRACE . declaration statements RBRACE
    (3) declaration -> . type ID SEMICOLON declaration
    (4) declaration -> . empty
    (5) type -> . basic dimensions
    (6) type -> . basic HASH
    (7) type -> . basic
    (8) type -> . RECORD LBRACE declaration RBRACE
    (73) empty -> .
    (11) basic -> . INT
    (12) basic -> . CHAR
    (13) basic -> . BOOL

    RECORD          shift and go to state 8
    BREAK           reduce using rule 73 (empty -> .)
    HASH            reduce using rule 73 (empty -> .)
    ID              reduce using rule 73 (empty -> .)
    IF              reduce using rule 73 (empty -> .)
    WHILE           reduce using rule 73 (empty -> .)
    DO              reduce using rule 73 (empty -> .)
    PRINT           reduce using rule 73 (empty -> .)
    READ            reduce using rule 73 (empty -> .)
    LBRACE          reduce using rule 73 (empty -> .)
    RBRACE          reduce using rule 73 (empty -> .)
    INT             shift and go to state 9
    CHAR            shift and go to state 10
    BOOL            shift and go to state 11

    declaration                    shift and go to state 4
    type                           shift and go to state 5
    empty                          shift and go to state 6
    basic                          shift and go to state 7

state 4

    (2) block -> LBRACE declaration . statements RBRACE
    (14) statements -> . statement statements
    (15) statements -> . empty
    (16) statement -> . local EQUALS boolean SEMICOLON
    (17) statement -> . conditional
    (18) statement -> . while_loop
    (19) statement -> . do_while_loop
    (20) statement -> . BREAK SEMICOLON
    (21) statement -> . print
    (22) statement -> . read
    (23) statement -> . block
    (73) empty -> .
    (31) local -> . HASH ID local_aux
    (32) local -> . ID local_aux
    (26) conditional -> . IF LPAREN boolean RPAREN statement conditional_aux
    (29) while_loop -> . WHILE LPAREN boolean RPAREN statement
    (30) do_while_loop -> . DO statement WHILE LPAREN boolean RPAREN SEMICOLON
    (24) print -> . PRINT LPAREN boolean RPAREN SEMICOLON
    (25) read -> . READ LPAREN local RPAREN SEMICOLON
    (2) block -> . LBRACE declaration statements RBRACE

    BREAK           shift and go to state 19
    RBRACE          reduce using rule 73 (empty -> .)
    HASH            shift and go to state 23
    ID              shift and go to state 24
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    DO              shift and go to state 27
    PRINT           shift and go to state 28
    READ            shift and go to state 29
    LBRACE          shift and go to state 3

    statements                     shift and go to state 12
    statement                      shift and go to state 13
    empty                          shift and go to state 14
    local                          shift and go to state 15
    conditional                    shift and go to state 16
    while_loop                     shift and go to state 17
    do_while_loop                  shift and go to state 18
    print                          shift and go to state 20
    read                           shift and go to state 21
    block                          shift and go to state 22

state 5

    (3) declaration -> type . ID SEMICOLON declaration

    ID              shift and go to state 30


state 6

    (4) declaration -> empty .

    BREAK           reduce using rule 4 (declaration -> empty .)
    HASH            reduce using rule 4 (declaration -> empty .)
    ID              reduce using rule 4 (declaration -> empty .)
    IF              reduce using rule 4 (declaration -> empty .)
    WHILE           reduce using rule 4 (declaration -> empty .)
    DO              reduce using rule 4 (declaration -> empty .)
    PRINT           reduce using rule 4 (declaration -> empty .)
    READ            reduce using rule 4 (declaration -> empty .)
    LBRACE          reduce using rule 4 (declaration -> empty .)
    RBRACE          reduce using rule 4 (declaration -> empty .)


state 7

    (5) type -> basic . dimensions
    (6) type -> basic . HASH
    (7) type -> basic .
    (9) dimensions -> . LBRACK NUMBER_INT RBRACK dimensions
    (10) dimensions -> . LBRACK NUMBER_INT RBRACK

    HASH            shift and go to state 32
    ID              reduce using rule 7 (type -> basic .)
    LBRACK          shift and go to state 33

    dimensions                     shift and go to state 31

state 8

    (8) type -> RECORD . LBRACE declaration RBRACE

    LBRACE          shift and go to state 34


state 9

    (11) basic -> INT .

    HASH            reduce using rule 11 (basic -> INT .)
    LBRACK          reduce using rule 11 (basic -> INT .)
    ID              reduce using rule 11 (basic -> INT .)


state 10

    (12) basic -> CHAR .

    HASH            reduce using rule 12 (basic -> CHAR .)
    LBRACK          reduce using rule 12 (basic -> CHAR .)
    ID              reduce using rule 12 (basic -> CHAR .)


state 11

    (13) basic -> BOOL .

    HASH            reduce using rule 13 (basic -> BOOL .)
    LBRACK          reduce using rule 13 (basic -> BOOL .)
    ID              reduce using rule 13 (basic -> BOOL .)


state 12

    (2) block -> LBRACE declaration statements . RBRACE

    RBRACE          shift and go to state 35


state 13

    (14) statements -> statement . statements
    (14) statements -> . statement statements
    (15) statements -> . empty
    (16) statement -> . local EQUALS boolean SEMICOLON
    (17) statement -> . conditional
    (18) statement -> . while_loop
    (19) statement -> . do_while_loop
    (20) statement -> . BREAK SEMICOLON
    (21) statement -> . print
    (22) statement -> . read
    (23) statement -> . block
    (73) empty -> .
    (31) local -> . HASH ID local_aux
    (32) local -> . ID local_aux
    (26) conditional -> . IF LPAREN boolean RPAREN statement conditional_aux
    (29) while_loop -> . WHILE LPAREN boolean RPAREN statement
    (30) do_while_loop -> . DO statement WHILE LPAREN boolean RPAREN SEMICOLON
    (24) print -> . PRINT LPAREN boolean RPAREN SEMICOLON
    (25) read -> . READ LPAREN local RPAREN SEMICOLON
    (2) block -> . LBRACE declaration statements RBRACE

    BREAK           shift and go to state 19
    RBRACE          reduce using rule 73 (empty -> .)
    HASH            shift and go to state 23
    ID              shift and go to state 24
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    DO              shift and go to state 27
    PRINT           shift and go to state 28
    READ            shift and go to state 29
    LBRACE          shift and go to state 3

    statement                      shift and go to state 13
    statements                     shift and go to state 36
    empty                          shift and go to state 14
    local                          shift and go to state 15
    conditional                    shift and go to state 16
    while_loop                     shift and go to state 17
    do_while_loop                  shift and go to state 18
    print                          shift and go to state 20
    read                           shift and go to state 21
    block                          shift and go to state 22

state 14

    (15) statements -> empty .

    RBRACE          reduce using rule 15 (statements -> empty .)


state 15

    (16) statement -> local . EQUALS boolean SEMICOLON

    EQUALS          shift and go to state 37


state 16

    (17) statement -> conditional .

    BREAK           reduce using rule 17 (statement -> conditional .)
    HASH            reduce using rule 17 (statement -> conditional .)
    ID              reduce using rule 17 (statement -> conditional .)
    IF              reduce using rule 17 (statement -> conditional .)
    WHILE           reduce using rule 17 (statement -> conditional .)
    DO              reduce using rule 17 (statement -> conditional .)
    PRINT           reduce using rule 17 (statement -> conditional .)
    READ            reduce using rule 17 (statement -> conditional .)
    LBRACE          reduce using rule 17 (statement -> conditional .)
    RBRACE          reduce using rule 17 (statement -> conditional .)
    ELSE            reduce using rule 17 (statement -> conditional .)


state 17

    (18) statement -> while_loop .

    BREAK           reduce using rule 18 (statement -> while_loop .)
    HASH            reduce using rule 18 (statement -> while_loop .)
    ID              reduce using rule 18 (statement -> while_loop .)
    IF              reduce using rule 18 (statement -> while_loop .)
    WHILE           reduce using rule 18 (statement -> while_loop .)
    DO              reduce using rule 18 (statement -> while_loop .)
    PRINT           reduce using rule 18 (statement -> while_loop .)
    READ            reduce using rule 18 (statement -> while_loop .)
    LBRACE          reduce using rule 18 (statement -> while_loop .)
    RBRACE          reduce using rule 18 (statement -> while_loop .)
    ELSE            reduce using rule 18 (statement -> while_loop .)


state 18

    (19) statement -> do_while_loop .

    BREAK           reduce using rule 19 (statement -> do_while_loop .)
    HASH            reduce using rule 19 (statement -> do_while_loop .)
    ID              reduce using rule 19 (statement -> do_while_loop .)
    IF              reduce using rule 19 (statement -> do_while_loop .)
    WHILE           reduce using rule 19 (statement -> do_while_loop .)
    DO              reduce using rule 19 (statement -> do_while_loop .)
    PRINT           reduce using rule 19 (statement -> do_while_loop .)
    READ            reduce using rule 19 (statement -> do_while_loop .)
    LBRACE          reduce using rule 19 (statement -> do_while_loop .)
    RBRACE          reduce using rule 19 (statement -> do_while_loop .)
    ELSE            reduce using rule 19 (statement -> do_while_loop .)


state 19

    (20) statement -> BREAK . SEMICOLON

    SEMICOLON       shift and go to state 38


state 20

    (21) statement -> print .

    BREAK           reduce using rule 21 (statement -> print .)
    HASH            reduce using rule 21 (statement -> print .)
    ID              reduce using rule 21 (statement -> print .)
    IF              reduce using rule 21 (statement -> print .)
    WHILE           reduce using rule 21 (statement -> print .)
    DO              reduce using rule 21 (statement -> print .)
    PRINT           reduce using rule 21 (statement -> print .)
    READ            reduce using rule 21 (statement -> print .)
    LBRACE          reduce using rule 21 (statement -> print .)
    RBRACE          reduce using rule 21 (statement -> print .)
    ELSE            reduce using rule 21 (statement -> print .)


state 21

    (22) statement -> read .

    BREAK           reduce using rule 22 (statement -> read .)
    HASH            reduce using rule 22 (statement -> read .)
    ID              reduce using rule 22 (statement -> read .)
    IF              reduce using rule 22 (statement -> read .)
    WHILE           reduce using rule 22 (statement -> read .)
    DO              reduce using rule 22 (statement -> read .)
    PRINT           reduce using rule 22 (statement -> read .)
    READ            reduce using rule 22 (statement -> read .)
    LBRACE          reduce using rule 22 (statement -> read .)
    RBRACE          reduce using rule 22 (statement -> read .)
    ELSE            reduce using rule 22 (statement -> read .)


state 22

    (23) statement -> block .

    BREAK           reduce using rule 23 (statement -> block .)
    HASH            reduce using rule 23 (statement -> block .)
    ID              reduce using rule 23 (statement -> block .)
    IF              reduce using rule 23 (statement -> block .)
    WHILE           reduce using rule 23 (statement -> block .)
    DO              reduce using rule 23 (statement -> block .)
    PRINT           reduce using rule 23 (statement -> block .)
    READ            reduce using rule 23 (statement -> block .)
    LBRACE          reduce using rule 23 (statement -> block .)
    RBRACE          reduce using rule 23 (statement -> block .)
    ELSE            reduce using rule 23 (statement -> block .)


state 23

    (31) local -> HASH . ID local_aux

    ID              shift and go to state 39


state 24

    (32) local -> ID . local_aux
    (33) local_aux -> . offset
    (34) local_aux -> . field
    (35) local_aux -> . empty
    (36) offset -> . LBRACK boolean RBRACK offset
    (37) offset -> . empty
    (38) field -> . DOT factor field
    (39) field -> . DOT factor
    (73) empty -> .

  ! shift/reduce conflict for DOT resolved as shift
    LBRACK          shift and go to state 44
    DOT             shift and go to state 45
    EQUALS          reduce using rule 73 (empty -> .)
    TIMES           reduce using rule 73 (empty -> .)
    DIVIDE          reduce using rule 73 (empty -> .)
    PLUS            reduce using rule 73 (empty -> .)
    MINUS           reduce using rule 73 (empty -> .)
    LT              reduce using rule 73 (empty -> .)
    LE              reduce using rule 73 (empty -> .)
    GT              reduce using rule 73 (empty -> .)
    GE              reduce using rule 73 (empty -> .)
    RPAREN          reduce using rule 73 (empty -> .)
    EQ              reduce using rule 73 (empty -> .)
    NEQ             reduce using rule 73 (empty -> .)
    AND             reduce using rule 73 (empty -> .)
    OR              reduce using rule 73 (empty -> .)
    SEMICOLON       reduce using rule 73 (empty -> .)
    RBRACK          reduce using rule 73 (empty -> .)

  ! DOT             [ reduce using rule 73 (empty -> .) ]

    local_aux                      shift and go to state 40
    offset                         shift and go to state 41
    field                          shift and go to state 42
    empty                          shift and go to state 43

state 25

    (26) conditional -> IF . LPAREN boolean RPAREN statement conditional_aux

    LPAREN          shift and go to state 46


state 26

    (29) while_loop -> WHILE . LPAREN boolean RPAREN statement

    LPAREN          shift and go to state 47


state 27

    (30) do_while_loop -> DO . statement WHILE LPAREN boolean RPAREN SEMICOLON
    (16) statement -> . local EQUALS boolean SEMICOLON
    (17) statement -> . conditional
    (18) statement -> . while_loop
    (19) statement -> . do_while_loop
    (20) statement -> . BREAK SEMICOLON
    (21) statement -> . print
    (22) statement -> . read
    (23) statement -> . block
    (31) local -> . HASH ID local_aux
    (32) local -> . ID local_aux
    (26) conditional -> . IF LPAREN boolean RPAREN statement conditional_aux
    (29) while_loop -> . WHILE LPAREN boolean RPAREN statement
    (30) do_while_loop -> . DO statement WHILE LPAREN boolean RPAREN SEMICOLON
    (24) print -> . PRINT LPAREN boolean RPAREN SEMICOLON
    (25) read -> . READ LPAREN local RPAREN SEMICOLON
    (2) block -> . LBRACE declaration statements RBRACE

    BREAK           shift and go to state 19
    HASH            shift and go to state 23
    ID              shift and go to state 24
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    DO              shift and go to state 27
    PRINT           shift and go to state 28
    READ            shift and go to state 29
    LBRACE          shift and go to state 3

    statement                      shift and go to state 48
    local                          shift and go to state 15
    conditional                    shift and go to state 16
    while_loop                     shift and go to state 17
    do_while_loop                  shift and go to state 18
    print                          shift and go to state 20
    read                           shift and go to state 21
    block                          shift and go to state 22

state 28

    (24) print -> PRINT . LPAREN boolean RPAREN SEMICOLON

    LPAREN          shift and go to state 49


state 29

    (25) read -> READ . LPAREN local RPAREN SEMICOLON

    LPAREN          shift and go to state 50


state 30

    (3) declaration -> type ID . SEMICOLON declaration

    SEMICOLON       shift and go to state 51


state 31

    (5) type -> basic dimensions .

    ID              reduce using rule 5 (type -> basic dimensions .)


state 32

    (6) type -> basic HASH .

    ID              reduce using rule 6 (type -> basic HASH .)


state 33

    (9) dimensions -> LBRACK . NUMBER_INT RBRACK dimensions
    (10) dimensions -> LBRACK . NUMBER_INT RBRACK

    NUMBER_INT      shift and go to state 52


state 34

    (8) type -> RECORD LBRACE . declaration RBRACE
    (3) declaration -> . type ID SEMICOLON declaration
    (4) declaration -> . empty
    (5) type -> . basic dimensions
    (6) type -> . basic HASH
    (7) type -> . basic
    (8) type -> . RECORD LBRACE declaration RBRACE
    (73) empty -> .
    (11) basic -> . INT
    (12) basic -> . CHAR
    (13) basic -> . BOOL

    RECORD          shift and go to state 8
    RBRACE          reduce using rule 73 (empty -> .)
    INT             shift and go to state 9
    CHAR            shift and go to state 10
    BOOL            shift and go to state 11

    declaration                    shift and go to state 53
    type                           shift and go to state 5
    empty                          shift and go to state 6
    basic                          shift and go to state 7

state 35

    (2) block -> LBRACE declaration statements RBRACE .

    $end            reduce using rule 2 (block -> LBRACE declaration statements RBRACE .)
    BREAK           reduce using rule 2 (block -> LBRACE declaration statements RBRACE .)
    HASH            reduce using rule 2 (block -> LBRACE declaration statements RBRACE .)
    ID              reduce using rule 2 (block -> LBRACE declaration statements RBRACE .)
    IF              reduce using rule 2 (block -> LBRACE declaration statements RBRACE .)
    WHILE           reduce using rule 2 (block -> LBRACE declaration statements RBRACE .)
    DO              reduce using rule 2 (block -> LBRACE declaration statements RBRACE .)
    PRINT           reduce using rule 2 (block -> LBRACE declaration statements RBRACE .)
    READ            reduce using rule 2 (block -> LBRACE declaration statements RBRACE .)
    LBRACE          reduce using rule 2 (block -> LBRACE declaration statements RBRACE .)
    RBRACE          reduce using rule 2 (block -> LBRACE declaration statements RBRACE .)
    ELSE            reduce using rule 2 (block -> LBRACE declaration statements RBRACE .)


state 36

    (14) statements -> statement statements .

    RBRACE          reduce using rule 14 (statements -> statement statements .)


state 37

    (16) statement -> local EQUALS . boolean SEMICOLON
    (40) boolean -> . join boolean_aux
    (43) join -> . equality join_aux
    (46) equality -> . relational equality_aux
    (50) relational -> . expression relational_operator expression
    (55) expression -> . term expression_aux
    (60) term -> . unary term_aux
    (64) unary -> . NOT unary
    (65) unary -> . NEG unary
    (66) unary -> . factor
    (67) factor -> . LPAREN boolean RPAREN
    (68) factor -> . local
    (69) factor -> . NUMBER_INT
    (70) factor -> . NUMBER_FLOAT
    (71) factor -> . FALSE
    (72) factor -> . TRUE
    (31) local -> . HASH ID local_aux
    (32) local -> . ID local_aux

    NOT             shift and go to state 62
    NEG             shift and go to state 63
    LPAREN          shift and go to state 65
    NUMBER_INT      shift and go to state 66
    NUMBER_FLOAT    shift and go to state 67
    FALSE           shift and go to state 68
    TRUE            shift and go to state 69
    HASH            shift and go to state 23
    ID              shift and go to state 24
